fix: new scrollbar component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,18 +12,20 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #e5e7eb;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #6b7280;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #4b5563;
+  cursor: pointer;
 }
 
 
